--- a/styles/Skills.module.scss
+++ b/styles/Skills.module.scss
@@ -10,12 +10,24 @@
             align-items: flex-start;
             justify-content: center;
             gap: 3rem;
+            @include tablet {
+                gap: 1.5rem;
+            }
+            @include mobile {
+                gap: 1rem;
+            }
             .roadmap__line {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 gap: 2rem;
                 padding: 0.2rem;
+                @include laptop {
+                    gap: 1.5rem;
+                }
+                @include tablet {
+                    gap: 1rem;
+                }
                 .icon {
                     display: flex;
                     align-items: center;
@@ -26,6 +38,14 @@
                         width: 30px;
                         height: 30px;
                         position: absolute;
+                        @include laptop {
+                            width: 20px;
+                            height: 20px;
+                        }
+                        @include tablet {
+                            width: 15px;
+                            height: 15px;
+                        }
                     }
                 }
                 .line {
@@ -34,6 +54,9 @@
                     width: 3px;
                     height: 300px;
                     border-radius: 10px;
+                    @include laptop {
+                        height: 230px;
+                    }
                 }
             }
             .text {
@@ -43,18 +66,42 @@
                 justify-content: center;
                 width: 60%;
                 gap: 1rem;
+                @include mobile {
+                    width: 75%;
+                }
                 .text__title {
                     font-size: 1.5rem;
                     font-weight: 600;
+                    @include laptop {
+                        font-size: 1.2rem;
+                    }
+                    @include tablet {
+                        font-size: 1rem;
+                    }
+                    @include mobile {
+                        font-size: 0.8rem;
+                    }
                 }
                 .text__description {
                     font-size: 3rem;
                     font-weight: 400;
                     line-height: 1.1;
+                    @include laptop {
+                        font-size: 2rem;
+                    }
+                    @include tablet {
+                        font-size: 1.5rem;
+                    }
                     span {
                         font-size: 3rem;
                         font-weight: 400;
                         color: #939aff;
+                        @include laptop {
+                            font-size: 2rem;
+                        }
+                        @include tablet {
+                            font-size: 1.5rem;
+                        }
                     }
                 }
                 p {
@@ -62,6 +109,12 @@
                     font-weight: 400;
                     line-height: 1.2;
                     opacity: 0.5;
+                    @include laptop {
+                        font-size: 1.2rem;
+                    }
+                    @include tablet {
+                        font-size: 1rem;
+                    }
                 }
             }
         }
