--- a/styles/ButtonOutline.module.scss
+++ b/styles/ButtonOutline.module.scss
@@ -14,18 +14,19 @@
     }
   }
   &:active {
-    transform: scale(1.5);
+    transform: scale(1.3);
   }
   svg {
     .bg_svg {
       stroke: #b8b8b834;
-      stroke-width: 3;
+      stroke-width: 2;
     }
     .filled {
       stroke: #fff;
-      stroke-width: 3;
+      stroke-width: 2;
       stroke-dasharray: 1;
       stroke-dashoffset: 1;
+      transform-origin: 50%;
       transition: stroke-dashoffset 0.4s ease-in-out;
     }
   }
