fix: buttons colors

--- a/styles/ButtonOutline.module.scss
+++ b/styles/ButtonOutline.module.scss
@@ -21,7 +21,7 @@
   }
   svg {
     .bg_svg {
-      stroke: #b8b8b834;
+      stroke: rgba(81, 96, 240, 0.25);
       stroke-width: 1;
     }
     .filled {
