--- a/styles/LinkBox.module.scss
+++ b/styles/LinkBox.module.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,200;8..60,300;8..60,400;8..60,500;8..60,600;8..60,700&display=swap');
 @import './responsive.scss';
+@import './colors.scss';
 
 .wrapper {
   &:hover {
@@ -33,7 +34,7 @@
       font-size: 5vw;
       text-transform: uppercase;
       line-height: 1;
-      font-family: 'Source Serif 4', serif;
+      color: $blue;
       font-weight: 300;
       transition: all 0.2s ease;
       @include tablet {
