change title and blob

--- a/styles/Blob.module.scss
+++ b/styles/Blob.module.scss
@@ -11,7 +11,7 @@
   background: linear-gradient(
     to right,
     $cyan,
-    $red
+    $blue
   );
   animation: rotate 20s infinite;
   filter: blur(70px);
