--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -20,7 +20,8 @@
     }
     .main__title {
       font-weight: 400;
-      font-size: 6vw;
+      width: 80%;
+      font-size: 5vw;
       line-height: 1;
       margin-bottom: 0.5rem;
       word-wrap: normal;
