--- a/styles/Blob.module.scss
+++ b/styles/Blob.module.scss
@@ -1,4 +1,5 @@
 @import './colors.scss';
+@import './responsive.scss';
 
 .blob {
   height: 900px;
@@ -15,6 +16,21 @@
   );
   animation: rotate 20s infinite;
   filter: blur(70px);
+  @include laptop {
+    height: 700px;
+    top: 10%;
+    left: 17%;
+  }
+  @include tablet {
+    height: 500px;
+    top: 20%;
+    left: 17%;
+  }
+  @include mobile {
+    height: 350px;
+    top: 27%;
+    left: 12%;
+  }
 }
 .blur {
   height: 100%;
