--- a/styles/Blob.module.scss
+++ b/styles/Blob.module.scss
@@ -11,7 +11,7 @@
   border-radius: 50%;
   background: linear-gradient(
     to right,
-    $cyan,
+    #DE3C09,
     $blue
   );
   animation: rotate 20s infinite;
