--- a/styles/ProjectBox.module.scss
+++ b/styles/ProjectBox.module.scss
@@ -1,60 +1,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,200;8..60,300;8..60,400;8..60,500;8..60,600;8..60,700&display=swap');
 @import './responsive.scss';
+@import './colors.scss';
 
 .box {
-    display: flex;
-    flex-direction: column;
-    width: 60%;
-    padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  padding-bottom: 20px;
     @include tablet {
-        width: 100%;
+      width: 100%;
     }
     &::before {
-        content: '';
-        display: block;
-        height: 0.5px;
-        width: 100%;
-        background-color: white;
-        margin-bottom: 0.6rem;
+      content: '';
+      display: block;
+      width: 100%;
+      height: 0.5px;
+      margin-bottom: 0.6rem;
+      background-color: #000;
     }
     .header {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
         p {
-            font-size: 1rem;
-            text-transform: uppercase;
+          font-size: 1rem;
+          text-transform: uppercase;
             @include tablet {
-                font-size: 0.8rem;
+              font-size: 0.8rem;
             }
             @include mobile {
-                font-size: 0.7rem;
+              font-size: 0.7rem;
             }
         }
     }
     .title {
         p {
-            font-size: 8vw;
-            font-family: 'Source Serif 4', serif;
-            text-transform: uppercase;
-            transition: all 0.1s ease;
+          transition: all 0.1s ease;
+          font-size: 7vw;
+          font-weight: 200;
+          color: $blue;
+          text-transform: uppercase;
             @include tablet {
-                font-size: 5rem;
+              font-size: 5rem;
             }
             @include mobile {
-                font-size: 3rem;
-                line-height: 2;
+              font-size: 3rem;
+              line-height: 2;
             }
         }
         &:hover {
             p {
-                opacity: 0.3;
+              opacity: 0.3;
             }
         }
     }
     .footer {
-        display: flex;
-        flex-direction: row;
-        gap: 1rem;
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
     }
 }
