--- a/styles/TechItem.module.scss
+++ b/styles/TechItem.module.scss
@@ -2,18 +2,18 @@
 
 .box {
     width: fit-content;
-    border: 1px solid #fff;
-    border-radius: 25px;
     padding: 0.3rem 0.7rem 0.2rem 0.7rem;
+    border: 1px solid #000;
+    border-radius: 25px;
     @include tablet {
-        padding: 0.2rem 0.5rem 0.1rem 0.5rem;
+      padding: 0.2rem 0.5rem 0.1rem 0.5rem;
     }
     p {
-        color: #fff;
-        font-size: 14px;
-        text-transform: uppercase;
+      font-size: 14px;
+      color: #fff;
+      text-transform: uppercase;
         @include tablet {
-            font-size: 10px;
+          font-size: 10px;
         }
     }
 }
