fix: typography theme

--- a/styles/TechItem.module.scss
+++ b/styles/TechItem.module.scss
@@ -10,7 +10,7 @@
     }
     p {
       font-size: 14px;
-      color: #fff;
+      color: #000;
       text-transform: uppercase;
         @include tablet {
           font-size: 10px;
