--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,3 +30,15 @@
         @apply font-manrope;
     }
 }
+
+@layer components {
+    .footer-link {
+        @apply font-manrope;
+        opacity: 0.5;
+        transition: all 0.1s ease-in-out;
+    }
+    .footer-link:hover {
+        @apply font-manrope;
+        opacity: 1;
+    }
+}
