--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -24,11 +24,15 @@
       font-size: 5vw;
       line-height: 1;
       margin-bottom: 0.5rem;
-      word-wrap: normal;
       text-align: center;
       color: white;
       @include tablet {
         font-size: 7vw;
+      }
+      .title {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        display: inline-block;
       }
     }
     .subtitle {
