style: clean code

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap');
 
 @layer base {
+    body {
+        background-color: #EFEBE4;
+    }
     * {
         @apply antialiased;
         -webkit-font-smoothing: antialiased;
