--- a/styles/Blob.module.scss
+++ b/styles/Blob.module.scss
@@ -20,6 +20,21 @@
     background: linear-gradient(to right, #F95A5C, $blue);
     animation: rotate 20s infinite;
     filter: blur(70px);
+    @include laptop {
+      filter: blur(50px);
+      top: 80px;
+    }
+    @include tablet {
+      top: 90px;
+      left: 0px;
+      width: 100%;
+    }
+    @include mobile {
+      filter: blur(30px);
+      top: 190px;
+      left: -40px;
+      width: 120%;
+    }
   }
   .blur {
     height: 100%;
