--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -29,6 +29,10 @@
       @include tablet {
         font-size: 7vw;
       }
+      @include mobile {
+        font-size: 9vw;
+        width: 100%;
+      }
       .title {
         white-space: nowrap;
         text-overflow: ellipsis;
@@ -62,7 +66,7 @@
       text-align: center;
       color: white;
       @include mobile {
-        font-size: 1.2rem;
+        font-size: 1rem;
       }
     }
   }
