--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -56,7 +56,7 @@
     @include mobile {
       width: 70%;
     }
-    p {
+    h2 {
       font-weight: 400;
       font-size: 1.4rem;
       line-height: 1.2;
