--- a/styles/ButtonOutline.module.scss
+++ b/styles/ButtonOutline.module.scss
@@ -1,25 +1,24 @@
 @import './colors.scss';
 
 .button_outline {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   outline: none;
   border: none;
   cursor: pointer;
   position: relative;
   transition: transform 0.4s ease;
-  width: fit-content;
   height: 70px;
   &:hover {
-    transform: scale(1.2);
     svg {
       .filled {
         stroke-dashoffset: 0;
       }
     }
   }
-  &:active {
-    transform: scale(1.3);
-  }
   svg {
+    width: auto;
     .bg_svg {
       stroke: rgba(81, 96, 240, 0.25);
       stroke-width: 1;
@@ -42,5 +41,6 @@
     font-size: 1rem;
     will-change: transform;
     width: calc(100% - 3em);
+    width: fit-content;
   }
 }
