--- a/styles/Blob.module.scss
+++ b/styles/Blob.module.scss
@@ -1,55 +1,44 @@
 @import './colors.scss';
-@import './responsive.scss';
 
-.container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .blob {
-    display: inline-block;
-    width: 70%;
-    aspect-ratio: 1;
-    position: absolute;
-    left: (100% - 70%) / 2;
-    top: (100% - 70%) / 2;
-    border-radius: 50%;
-    line-height: 0;
-    background: linear-gradient(to right, #F95A5C, $blue);
-    animation: rotate 20s infinite;
-    filter: blur(70px);
-    @include laptop {
-      filter: blur(50px);
-      top: 80px;
-    }
-    @include tablet {
-      top: 90px;
-      left: 0px;
-      width: 100%;
-    }
-    @include mobile {
-      filter: blur(30px);
-      top: 190px;
-      left: -40px;
-      width: 120%;
-    }
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
   }
-  .blur {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    z-index: 2;
-    backdrop-filter: blur(10px);
+  100% {
+    transform: rotate(360deg);
   }
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(0deg);
+.gradient {
+  --size: 750px;
+  --speed: 50s;
+  --easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
+  position: absolute;
+  top: calc(50% - var(--size) / 2);
+  left: calc(50% - var(--size) / 2);
+  width: var(--size);
+  height: var(--size);
+  filter: blur(calc(var(--size) / 11));
+  background-image: linear-gradient($orange, $blue);
+  animation: rotate var(--speed) var(--easing) alternate infinite;
+  border-radius: 50%;
+  clip-path: circle(50% at center) inset(10%);
   }
-  to {
-    transform: rotate(360deg);
+
+@media (min-width: 720px) {
+  .gradient {
+    --size: 750px;
+  }
+}
+
+@media (min-width: 900px) {
+  .gradient {
+    --size: 800px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .gradient {
+    --size: 900px;
   }
 }
