--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,200;8..60,300;8..60,400;8..60,500;8..60,600;8..60,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200&display=swap');
 @import url("https://api.fontshare.com/v2/css?f[]=chillax@600,500,300,700,400,200&display=swap");
 
 @layer base {
@@ -17,38 +13,47 @@
         -webkit-font-smoothing: antialiased;
     }
     p {
-        @apply font-manrope;
+        @apply font-chillax;
     }
     a {
-        @apply font-manrope;
+        @apply font-chillax;
     }
     span {
+        @apply font-chillax;
+    }
+    li {
         @apply font-chillax;
     }
     h1 {
         @apply font-chillax;
     }
     h2 {
-        @apply font-manrope;
+        @apply font-chillax;
     }
     h3 {
-        @apply font-manrope;
+        @apply font-chillax;
     }
     h4 {
-        @apply font-manrope;
+        @apply font-chillax;
+    }
+    h5 {
+        @apply font-chillax;
+    }
+    h6 {
+        @apply font-chillax;
     }
 }
 
 @layer components {
     .footer-link {
-        @apply font-manrope;
+        @apply font-chillax;
         color: white;
         opacity: 0.5;
         cursor: pointer;
         transition: all 0.1s ease-in-out;
     }
     .footer-link:hover {
-        @apply font-manrope;
+        @apply font-chillax;
         opacity: 1;
     }
     .default-text-blue {
