--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,6 +42,10 @@
     h6 {
         @apply font-chillax;
     }
+    strong {
+        @apply font-chillax;
+        font-weight: 600;
+    }
 }
 
 @layer components {
@@ -63,5 +67,18 @@
         @media (max-width: 980px) {
             font-size: 8vw;
         }
+    }
+    .email-link {
+        content: "";
+        position: absolute;
+        bottom: -2px;
+        left: 0;
+        width: 0;
+        height: 2px;
+        background-color: white;
+        transition: width 0.3s ease-in-out;
+    }
+    .email-link-hover {
+        width: 100%;
     }
 }
