--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -4,3 +4,10 @@ $red: #ff005d;
 $purple: #c238ff;
 $pink: #cea9f3;
 $orange: #F95A5C;
+
+/* SCSS HEX */
+$seasalt: #fafafaff;
+$alice-blue: #e3f2fdff;
+$indian-red: #db5461ff;
+$dim-gray: #686963ff;
+$cambridge-blue: #8aa29eff;
